prototype: almost complete communication round trip client-(rest)>server-(jms)>agent-(jms)>server

--- a/client/src/main/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
+++ b/client/src/main/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
@@ -17,6 +17,7 @@
                         <KeyCodeCombination alt="UP" code="R" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
                   </MenuItem>
+                  <MenuItem mnemonicParsing="false" onAction="#checkAll" text="Check all" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
