--- a/client/src/main/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
+++ b/client/src/main/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
@@ -18,6 +18,7 @@
                      </accelerator>
                   </MenuItem>
                   <MenuItem mnemonicParsing="false" onAction="#checkAll" text="Check all" />
+                  <MenuItem mnemonicParsing="false" onAction="#restartServer" text="Restart server" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
