--- a/client/src/main/io/jrevolt/sysmon/client/ui/AgentsView.fxml
+++ b/client/src/main/io/jrevolt/sysmon/client/ui/AgentsView.fxml
@@ -6,7 +6,7 @@
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.jrevolt.sysmon.client.ui.AgentsView">
    <center>
-      <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="cluster" prefWidth="75.0" text="Cluster" />
           <TableColumn fx:id="server" prefWidth="75.0" text="Server" />
