--- a/client/src/main/io/jrevolt/sysmon/client/ui/AgentsView.fxml
+++ b/client/src/main/io/jrevolt/sysmon/client/ui/AgentsView.fxml
@@ -4,16 +4,17 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.jrevolt.sysmon.client.ui.AgentsView">
+<BorderPane prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.jrevolt.sysmon.client.ui.AgentsView">
    <center>
-      <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
+      <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="cluster" prefWidth="75.0" text="Cluster" />
           <TableColumn fx:id="server" prefWidth="75.0" text="Server" />
             <TableColumn fx:id="status" prefWidth="75.0" text="Status" />
+            <TableColumn fx:id="lastChecked" prefWidth="75.0" text="LastChecked" />
             <TableColumn fx:id="lastUpdated" prefWidth="75.0" text="LastUpdated" />
+            <TableColumn fx:id="checked" prefWidth="75.0" text="Checked" />
             <TableColumn fx:id="ping" prefWidth="75.0" text="Ping" />
-            <TableColumn fx:id="artifact" prefWidth="75.0" text="Artifact" />
             <TableColumn fx:id="version" prefWidth="75.0" text="Version" />
             <TableColumn fx:id="built" prefWidth="75.0" text="Built" />
             <TableColumn fx:id="actions" prefWidth="75.0" text="Actions" />
