--- a/client/src/main/io/jrevolt/sysmon/client/ui/ArtifactsView.fxml
+++ b/client/src/main/io/jrevolt/sysmon/client/ui/ArtifactsView.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.jrevolt.sysmon.client.ui.ArtifactsView">
    <center>
       <TableView BorderPane.alignment="CENTER">
         <columns>
