--- a/client/src/main/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
+++ b/client/src/main/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
@@ -11,27 +11,16 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
                   <MenuItem mnemonicParsing="false" onAction="#refresh" text="Refresh">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="R" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
                   </MenuItem>
-                  <MenuItem mnemonicParsing="false" text="Check all" />
-                  <MenuItem mnemonicParsing="false" onAction="#restartAll" text="Restart server and all agents" />
+                  <MenuItem mnemonicParsing="false" text="Restart Server" />
+                  <MenuItem mnemonicParsing="false" onAction="#restartAll" text="Restart Agents" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-            <Menu mnemonicParsing="false" text="Options">
-               <items>
-                  <RadioMenuItem mnemonicParsing="false" text="INT" />
-                  <RadioMenuItem mnemonicParsing="false" text="TEST" />
-               </items>
-            </Menu>
+            <Menu mnemonicParsing="false" text="Options" />
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
@@ -41,7 +30,7 @@
       </MenuBar>
    </top>
    <bottom>
-      <TextField disable="true" editable="false" text="Status bar!" BorderPane.alignment="CENTER" />
+      <TextField fx:id="statusbar" disable="true" editable="false" text="Status bar!" BorderPane.alignment="CENTER" />
    </bottom>
    <center>
       <BorderPane BorderPane.alignment="CENTER">
