--- a/client/src/main/io/jrevolt/sysmon/client/ui/AgentsView.fxml
+++ b/client/src/main/io/jrevolt/sysmon/client/ui/AgentsView.fxml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-
-<BorderPane prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.jrevolt.sysmon.client.ui.AgentsView">
-   <center>
-      <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn fx:id="cluster" prefWidth="75.0" text="Cluster" />
-          <TableColumn fx:id="server" prefWidth="75.0" text="Server" />
-            <TableColumn fx:id="status" prefWidth="75.0" text="Status" />
-            <TableColumn fx:id="checked" prefWidth="75.0" text="Checked" />
-            <TableColumn fx:id="ping" prefWidth="75.0" text="Ping" />
-            <TableColumn fx:id="lastChecked" prefWidth="75.0" text="LastChecked" />
-            <TableColumn fx:id="lastUpdated" prefWidth="75.0" text="LastUpdated" />
-            <TableColumn fx:id="version" prefWidth="75.0" text="Version" />
-            <TableColumn fx:id="built" prefWidth="75.0" text="Built" />
-            <TableColumn fx:id="actions" prefWidth="75.0" text="Actions" />
-        </columns>
-         <contextMenu>
-            <ContextMenu>
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#refresh" text="Refresh" />
-                  <MenuItem mnemonicParsing="false" onAction="#restartSelectedAgents" text="Restart selected agents" />
-              </items>
-            </ContextMenu>
-         </contextMenu>
-      </TableView>
-   </center>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="io.jrevolt.sysmon.client.ui.AgentsView">
+	<center>
+		<TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true"
+		           BorderPane.alignment="CENTER">
+			<columns>
+				<TableColumn fx:id="cluster" prefWidth="75.0" text="Cluster" style="-fx-alignment: baseline-center"/>
+				<TableColumn fx:id="server" prefWidth="75.0" text="Server" style="-fx-alignment: baseline-right"/>
+				<TableColumn fx:id="status" prefWidth="75.0" text="Status" style="-fx-alignment: baseline-center"/>
+				<TableColumn fx:id="ping" prefWidth="75.0" text="Ping" style="-fx-alignment: baseline-right"/>
+				<TableColumn fx:id="lastModified" prefWidth="75.0" text="Last Modified" style="-fx-alignment: baseline-right"/>
+				<TableColumn fx:id="version" prefWidth="75.0" text="Version" style="-fx-alignment: baseline-center"/>
+				<TableColumn fx:id="built" prefWidth="75.0" text="Built" style="-fx-alignment: baseline-center"/>
+				<TableColumn fx:id="actions" prefWidth="75.0" text="Actions"/>
+			</columns>
+			<contextMenu>
+				<ContextMenu>
+					<items>
+						<MenuItem mnemonicParsing="false" onAction="#refresh" text="Refresh"/>
+						<MenuItem mnemonicParsing="false" onAction="#restartSelectedAgents" text="Restart selected agents"/>
+					</items>
+				</ContextMenu>
+			</contextMenu>
+		</TableView>
+	</center>
 </BorderPane>
