--- a/client/src/main/java/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
+++ b/client/src/main/java/io/jrevolt/sysmon/client/ui/ClientFrame.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.jrevolt.sysmon.client.ui.ClientFrame">
+<BorderPane stylesheets="@ClientFrame.css" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.jrevolt.sysmon.client.ui.ClientFrame">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
